// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyDefsConsumer group updates should create group properties from the $group_set property 1`] = `
[
  {
    "created_at": "<REPLACED_DATE>",
    "id": "<REPLACED-UUID-0>",
    "last_seen_at": "<REPLACED_DATE>",
    "name": "$groupidentify",
    "project_id": "2",
    "query_usage_30_day": null,
    "team_id": 2,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer group updates should create group properties from the $group_set property 2`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "$group_key",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-1>",
    "is_numerical": false,
    "name": "$group_type",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
  {
    "group_type_index": 0,
    "id": "<REPLACED-UUID-2>",
    "is_numerical": false,
    "name": "prop1",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 3,
    "volume_30_day": null,
  },
  {
    "group_type_index": 0,
    "id": "<REPLACED-UUID-3>",
    "is_numerical": true,
    "name": "prop2",
    "project_id": "2",
    "property_type": "Numeric",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 3,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should batch multiple writes 1`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "foo",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-1>",
    "is_numerical": true,
    "name": "test",
    "project_id": "2",
    "property_type": "Numeric",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-2>",
    "is_numerical": false,
    "name": "url",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should handle existing property defs 1`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": true,
    "name": "foo",
    "project_id": "2",
    "property_type": "Numeric",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should handle existing property defs 2`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": true,
    "name": "foo",
    "project_id": "2",
    "property_type": "Numeric",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-1>",
    "is_numerical": false,
    "name": "other",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should only write the first seen property defs to the DB 1`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "url",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 1`] = `
[
  {
    "created_at": "<REPLACED_DATE>",
    "id": "<REPLACED-UUID-0>",
    "last_seen_at": "<REPLACED_DATE>",
    "name": "$pageview",
    "project_id": "2",
    "query_usage_30_day": null,
    "team_id": 2,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 2`] = `
[
  {
    "event": "$pageview",
    "id": "<REPLACED_NUMBER>",
    "project_id": "2",
    "property": "url",
    "team_id": 2,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 3`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "url",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;
